# cryptils

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml  tox.ini
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
src/cryptils/: __init__.py  _core.py  _crypto.py  _currency.py  _fiat.py  _pydantic.py  btc.py  core.py  eth.py  usdc.py  usdt.py
tests/: __init__.py  test_btc.py  test_core.py  test_currency.py  test_eth.py  test_fiat.py  test_pydantic.py  test_usdc.py  test_usdt.py
