[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptils"
version = "0.1.0a1"
description = "A simple python utility library for representing cryptocurrency amounts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=4.0", "tox>=4.0"]

[project.urls]
Homepage = "https://github.com/seba3c/cryptils"
Repository = "https://github.com/seba3c/cryptils"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptils"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src/cryptils"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.13",
    "tox>=4.0",
    "tox-uv>=1.0",
]
